# basic-setup

./: .dockerignore  .gitignore  README.md  pyproject.toml
docker/: Dockerfile  build.ps1
entrypoint/: preprocessing.py
src/corp_name/project_name/module_name/: handler.py
src/corp_name/project_name/module_name/services/: reverse_string_service.py
