[tool.poetry]
name = "basic-setup"
version = "0.1.0"
description = ""
authors = ["Jan Meppe"]
packages = [
    { from = "src", include = "corp_name" },
]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
